// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`api normalizeImageminConfig should works 1`] = `"No plugins found for \`imagemin\`, please read documentation"`;

exports[`api normalizeImageminConfig should works 2`] = `"No plugins found for \`imagemin\`, please read documentation"`;

exports[`api normalizeImageminConfig should works 3`] = `
"Unknown plugin: imagemin-unknown

Did you forget to install the plugin?
You can install it with:

$ npm install imagemin-unknown --save-dev
$ yarn add imagemin-unknown --dev
Cause: Cannot find module 'unknown' from 'src/utils.js'"
`;

exports[`api normalizeImageminConfig should works 4`] = `
"Unknown plugin: imagemin-unknown

Did you forget to install the plugin?
You can install it with:

$ npm install imagemin-unknown --save-dev
$ yarn add imagemin-unknown --dev
Cause: Cannot find module 'imagemin-unknown' from 'src/utils.js'"
`;

exports[`api normalizeImageminConfig should works 5`] = `"No plugins found for \`imagemin\`, please read documentation"`;

exports[`api normalizeImageminConfig should works 6`] = `"Invalid plugin configuration 'true', plugin configuration should be 'string' or '[string, object]'""`;

exports[`api normalizeImageminConfig should works 7`] = `
{
  "plugins": [
    [Function],
  ],
}
`;

exports[`api normalizeImageminConfig should works 8`] = `
{
  "plugins": [
    [Function],
  ],
}
`;

exports[`api normalizeImageminConfig should works 9`] = `
{
  "plugins": [
    [Function],
  ],
}
`;

exports[`api normalizeImageminConfig should works 10`] = `
{
  "plugins": [
    [Function],
  ],
}
`;
